# Python_-i-u-khi-n-CANoe

./: .gitignore  CANoeTestGUI.py  CANoeTestGUI.spec  RunAllTests.py  TestResults_20260211_103430.xlsx  TestResults_20260211_105141.xlsx  TestResults_20260211_113743.xlsx  TestResults_20260211_122943.xlsx  run.bat  tmpclaude-76fc-cwd
.serena/: project.yml
CANoeConfig/: PythonBasic.cfg  PythonBasicEmpty.cfg
CANoeConfig/.run/PythonBasicEmpty/m7f8be5mfnpq/: EasyTest.vtumanifest  Tests.vxtx  Tests.vxtx.can  Tests.vxtx.cbf  [FileSystemMetainfo]  [MakeInfo]  build.hash
CANoeConfig/Panels/: Control.xvp  Display.xvp
Code tham khảo/Python Client/: client.py
Code tham khảo/SIL/AISilTestingAnalysis/CANoe/: AISilTestingAnalysis.cfg
Code tham khảo/SIL/AISilTestingAnalysis/vTESTStudio/: AutomaticTest.vtsoproj
Code tham khảo/SIL/SilAdapterBasicCpp/CANoe/: Comment_SilAdapterBasicCpp.txt  OpenSutFolder.bat  SilAdapterBasicCpp.cfg
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/: CMakeLists.txt  CMakeSettings.json
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_Build/: SilAdapterBasicCpp.sln
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_Build/Application_C/: Application_C.vcxproj  Application_C.vcxproj.filters
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_Build/Application_Cpp/: Application_Cpp.vcxproj  Application_Cpp.vcxproj.filters
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_Build/SilAdapter/: SilAdapter.vcxproj  SilAdapter.vcxproj.filters
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_C/: CMakeLists.txt
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_C/SilAdapterWrapper/: SilAdapterWrapper.cpp  SilAdapterWrapper.h
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_C/src/: IO.c  IO.h  Logic.c  Logic.h  main.c
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_Cpp/: CMakeLists.txt
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/Application_Cpp/src/: IO.cpp  IO.hpp  Logic.cpp  main.cpp
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/: .sab-manifest  CMakeLists.txt
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/Dependencies/: .cla-version  CMakeLists.txt
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/Dependencies/Cla/: CMakeLists.txt
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/Dependencies/Cla/include/cla/: Cla.hpp  ClaError.hpp  ClaMacros.hpp  ClaSil.hpp  DataTypes.hpp  IAttributeDefinition.hpp  ICallContext.hpp  IClaService.hpp  IClaServiceSil.hpp  IConsumerCallContext.hpp  IDeserializer.hpp  IDo.hpp  IDoBlueprint.hpp  IDoConsumedData.hpp  IDoConsumedEvent.hpp  IDoConsumedField.hpp  IDoConsumedMethod.hpp  IDoData.hpp  IDoEvent.hpp  IDoField.hpp  IDoInstContainer.hpp  IDoInstContainerElement.hpp  IDoInterface.hpp  IDoInterfaceBlueprint.hpp  IDoInterfaceConsumedField.hpp  IDoInterfaceConsumedMethod.hpp  IDoInterfaceField.hpp  IDoInterfaceInternalField.hpp  IDoInterfaceInternalMethod.hpp  IDoInterfaceMember.hpp  IDoInterfaceMemberBlueprint.hpp  IDoInterfaceProvidedField.hpp  IDoInterfaceProvidedMethod.hpp  IDoInterfaceVEMember.hpp  IDoInternalData.hpp  IDoInternalEvent.hpp  IDoInternalField.hpp  IDoInternalMethod.hpp  IDoMember.hpp  IDoMethod.hpp  (+10 more)
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/Dependencies/Cla/src/: CallContext.cpp  CallContext.hpp  ClaService.cpp  ClaService.hpp  ClaSil.cpp  ConsumerCallContext.cpp  ConsumerCallContext.hpp  Deserializer.cpp  Deserializer.hpp  Do.cpp  Do.hpp  DoConsumedData.cpp  DoConsumedData.hpp  DoConsumedEvent.cpp  DoConsumedEvent.hpp  DoConsumedField.cpp  DoConsumedField.hpp  DoConsumedMethod.cpp  DoConsumedMethod.hpp  DoData.cpp  DoData.hpp  DoEvent.cpp  DoEvent.hpp  DoField.cpp  DoField.hpp  DoInstContainer.cpp  DoInstContainer.hpp  DoInstContainerElement.cpp  DoInstContainerElement.hpp  DoMember.cpp  DoMember.hpp  DoMethod.cpp  DoMethod.hpp  DoProvidedData.cpp  DoProvidedData.hpp  DoProvidedEvent.cpp  DoProvidedEvent.hpp  DoProvidedField.cpp  DoProvidedField.hpp  DoProvidedMethod.cpp  (+19 more)
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/TypeLib/: CMakeLists.txt  TypeLibFiles.cmake
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/TypeLib/include/SilAdapter/: SilAdapter.hpp
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/TypeLib/include/TypeLib/: Accessor.hpp  DataTypes.hpp  Deserializer.hpp  DistributedObject.hpp  DistributedObjectBase.hpp  DoConsumedData.hpp  DoConsumedEvent.hpp  DoConsumedField.hpp  DoConsumedMethod.hpp  DoData.hpp  DoEvent.hpp  DoField.hpp  DoMethod.hpp  DoProvidedData.hpp  DoProvidedEvent.hpp  DoProvidedField.hpp  DoProvidedMethod.hpp  EmbeddedMember.hpp  Optional.hpp  RoomTemperatureControl.hpp  Serialization.hpp  Serializer.hpp  StrongType.hpp  ThreadContext.hpp  TypeLibUtil.hpp
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/TypeLib/include/TypeLib/RoomTemperatureControl/: IHeating.hpp  ISensor.hpp  RoomTemperatureControl_Types.hpp  State.hpp
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/TypeLib/src/: Deserializer.cpp  DistributedObjectBase.cpp  DoConsumedMethod.cpp  DoMethod.cpp  DoProvidedMethod.cpp  RoomTemperatureControl.cpp  RoomTemperatureControl_Internal.hpp  Serializer.cpp  SilAdapter.cpp  SilAdapter_Internal.hpp  ThreadContext.cpp
Code tham khảo/SIL/SilAdapterBasicCpp/SUT/SilAdapter/TypeLib/src/RoomTemperatureControl/: IHeating.cpp  ISensor.cpp
Code tham khảo/SIL/SilAdapterBasicCpp/vTESTstudio/: SilAdapterBasicCpp.vtsoproj
Code tham khảo/SIL/SilAdapterBenchmark/SUT/: CMakeLists.txt  SilAdapter.cmake  SilKitConfig.yaml
Code tham khảo/SIL/SilAdapterBenchmark/SUT/Application_Cpp/: CMakeLists.txt
Code tham khảo/SIL/SilAdapterBenchmark/SUT/Application_Cpp/src/: main.cpp
Code tham khảo/SIL/SilKitCAN/SilKit/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Readme.md
Code tham khảo/SIL/SilKitCAN/SilKit/SUT/Engine/: CMakeLists.txt  SUT_Engine.cpp
Code tham khảo/SIL/SilKitCAN/SilKit/SUT/Lights/: CMakeLists.txt  SUT_Lights.cpp
Code tham khảo/py_canoe-main/scripts/: build_wheel_package.bat
Code tham khảo/py_canoe-main/tests/: test_py_canoe.py
(+115 files in other folders)
